--- a/index.html
+++ b/index.html
@@ -10,38 +10,38 @@
 </head>
 <body>
     <main class="main">
-        <!-------- heading section ---------->
+        <!---------- heading section ------------>
         <header class="heading">
             <h1 class="main-tag">Reliable, efficient delivery</h1>
             <h2 class="sub-tag">Powered by Technology</h2>
             <p class="para">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
         </header>
 
-        <!-------- cards section ---------->
+        <!---------- cards section -------------->
         <section class="cards-wrapper">
             <!-- card 1 -->
-            <div class="card-1">
+            <div class="card card-1">
                 <h2 class="card_heading">Supervisor</h2>
                 <p class="card_para"> Monitors activity to identify project roadblocks </p>
                 <img src="./assets/img/icon-supervisor.svg" alt="icon" class="card_img">
             </div>
 
             <!-- card 2 -->
-            <div class="card-2">
+            <div class="card card-2">
                 <h2 class="card_heading">Team Builder</h2>
                 <p class="card_para">Scans our talent network to create the optimal team for your project</p>
                 <img src="./assets/img/icon-team-builder.svg" alt="icon" class="card_img">
             </div>
 
             <!-- card 3 -->
-            <div class="card-3">
+            <div class="card card-3">
                 <h2 class="card_heading">Calculator</h2>
                 <p class="card_para">Uses data from past projects to provide better delivery estimates</p>
                 <img src="./assets/img/icon-calculator.svg" alt="icon" class="card_img">
             </div>
 
             <!-- card 4 -->
-            <div class="card-4">
+            <div class="card card-4">
                 <h2 class="card_heading">Karma</h2>
                 <p class="card_para">Regularly evaluates our talent to ensure quality</p>
                 <img src="./assets/img/icon-karma.svg" alt="icon" class="card_img">
